New comp added from shortcut

--- a/src/components/Footer.astro
+++ b/src/components/Footer.astro
@@ -11,10 +11,10 @@
 			  <h3 class="text-sm font-semibold leading-6 text-white">Solutions</h3>
 			  <ul role="list" class="mt-6 space-y-4">
 				<li>
-				  <a href="#" class="text-sm leading-6 text-white hover:text-white">Marketing</a>
+				  <a href="/ux-ui" class="text-sm leading-6 text-white hover:text-white">UX/UI</a>
 				</li>
 				<li>
-				  <a href="#" class="text-sm leading-6 text-white hover:text-white">Analytics</a>
+				  <a href="/microservices" class="text-sm leading-6 text-white hover:text-white">Microservices</a>
 				</li>
 				<li>
 				  <a href="#" class="text-sm leading-6 text-white hover:text-white">Commerce</a>
@@ -124,7 +124,7 @@
 			</svg>
 		  </a>
 		</div>
-		<p class="mt-8 text-xs leading-5 text-white md:order-1 md:mt-0">&copy; 2020 Your Company, Inc. All rights reserved.</p>
+		<p class="mt-8 text-xs leading-5 text-white md:order-1 md:mt-0">&copy; 2023 Tec Plus,LLC , Inc. All rights reserved.</p>
 	  </div>
 	</div>
   </footer>
