New comp added from shortcut

--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -117,7 +117,7 @@ const featured = [
 						  </span>
 						</a>
 					  </div>
-					  <h1 class="mt-10 hidden text-6xl text-center md:text-left font-bold tracking-tight text-white  sm:text-6xl">Transforming <span class="gradient-1">Visions</span> into Powerful <span class="gradient-2">Realities</span></h1>
+					  <h1 class="mt-10 hidden md:block text-6xl text-center md:text-left font-bold tracking-tight text-white  sm:text-6xl">Transforming <span class="gradient-1">Visions</span> into Powerful <span class="gradient-2">Realities</span></h1>
 					  <h1 class="mt-10 md:hidden text-7xl text-center  font-bold tracking-tight text-white ">Transforming Visions into Powerful <span class="gradient-2">Realities</span></h1>
 					  <p class="mt-6 text-lg leading-8 text-white">
 						We bring a new level experience in software design. Combining new technologies and mature practice to achieve enterprise ready results in
