--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -349,8 +349,8 @@ With recognition of our work in UX/UI, product development, and API platform dev
 		<div class="bg-primary">
   <div class="px-6 py-24 sm:px-6 sm:py-32 lg:px-8">
     <div class="mx-auto max-w-2xl text-center">
-      <h2 class="text-3xl font-bold tracking-tight text-white sm:text-4xl">Boost your productivity.<br>Start using our app today.</h2>
-      <p class="mx-auto mt-6 max-w-xl text-lg leading-8 text-indigo-200">Incididunt sint fugiat pariatur cupidatat consectetur sit cillum anim id veniam aliqua proident excepteur commodo do ea.</p>
+      <h2 class="text-3xl font-bold tracking-tight text-white sm:text-4xl"><br>Experience the Tecplus difference in your next project. Get in touch now!</h2>
+      <p class="mx-auto mt-6 max-w-xl text-lg leading-8 text-indigo-200">Discover a team that brings unparalleled expertise in product development and design systems, perfectly blended with a forward-thinking approach. Reach out to Tecplus today, and let's create software solutions that truly stand out.</p>
       <div class="mt-10 flex items-center justify-center gap-x-6">
         <a href="#" class="rounded-md bg-secondary px-3.5 py-2.5 text-sm font-bold text-black  shadow-sm hover:bg-indigo-50 focus-visible:outline focus-visible:outline-2 focus-visible:outline-offset-2 focus-visible:outline-white">Get started</a>
         <a href="#" class="text-sm font-bold leading-6 text-white">Learn more <span aria-hidden="true">→</span></a>
