--- a/src/pages/ux-ui.astro
+++ b/src/pages/ux-ui.astro
@@ -15,7 +15,7 @@ import Header from "../components/Header.astro";
     <div class="mx-auto max-w-8xl px-6 lg:px-8">
       <div class="mx-auto max-w-2xl lg:mx-0">
         <h1 class="mt-2 text-3xl font-bold tracking-tight text-black sm:text-5xl">UX/UI</h1>
-        <p class="mt-6 text-xl leading-8 text-gray-700">Aliquet nec orci mattis amet quisque ullamcorper neque, nibh sem. At arcu, sit dui mi, nibh dui, diam eget aliquam. Quisque id at vitae feugiat egestas ac. Diam nulla orci at in viverra scelerisque eget. Eleifend egestas fringilla sapien.</p>
+        <p class="mt-6 text-xl leading-8 text-gray-700">Tec Plus delivers. UX/UI is in the equation. We time mmaking sure that your users are able to know exactly what they should do next. </p>
       </div>
       <div class="mx-auto mt-16 grid max-w-2xl grid-cols-1 gap-x-8 gap-y-16 lg:mx-0 lg:mt-10 lg:max-w-none lg:grid-cols-12">
         <div class="relative lg:order-last lg:col-span-5">
@@ -47,7 +47,7 @@ import Header from "../components/Header.astro";
               <svg class="mt-1 h-5 w-5 flex-none text-primary" viewBox="0 0 20 20" fill="currentColor" aria-hidden="true">
                 <path fill-rule="evenodd" d="M5.5 17a4.5 4.5 0 01-1.44-8.765 4.5 4.5 0 018.302-3.046 3.5 3.5 0 014.504 4.272A4 4 0 0115 17H5.5zm3.75-2.75a.75.75 0 001.5 0V9.66l1.95 2.1a.75.75 0 101.1-1.02l-3.25-3.5a.75.75 0 00-1.1 0l-3.25 3.5a.75.75 0 101.1 1.02l1.95-2.1v4.59z" clip-rule="evenodd" />
               </svg>
-              <span><strong class="font-semibold text-black">Push to deploy.</strong> Lorem ipsum, dolor sit amet consectetur adipisicing elit. Maiores impedit perferendis suscipit eaque, iste dolor cupiditate blanditiis ratione.</span>
+              <span><strong class="font-semibold text-black">Product integrated Marketing</strong> Lorem ipsum, dolor sit amet consectetur adipisicing elit. Maiores impedit perferendis suscipit eaque, iste dolor cupiditate blanditiis ratione.</span>
             </li>
             <li class="flex gap-x-3">
               <svg class="mt-1 h-5 w-5 flex-none text-primary" viewBox="0 0 20 20" fill="currentColor" aria-hidden="true">
