New comp added from shortcut

--- a/src/pages/ux-ui.astro
+++ b/src/pages/ux-ui.astro
@@ -53,7 +53,7 @@ import Header from "../components/Header.astro";
               <svg class="mt-1 h-5 w-5 flex-none text-primary" viewBox="0 0 20 20" fill="currentColor" aria-hidden="true">
                 <path fill-rule="evenodd" d="M10 1a4.5 4.5 0 00-4.5 4.5V9H5a2 2 0 00-2 2v6a2 2 0 002 2h10a2 2 0 002-2v-6a2 2 0 00-2-2h-.5V5.5A4.5 4.5 0 0010 1zm3 8V5.5a3 3 0 10-6 0V9h6z" clip-rule="evenodd" />
               </svg>
-              <span><strong class="font-semibold text-black">SSL certificates.</strong> Anim aute id magna aliqua ad ad non deserunt sunt. Qui irure qui lorem cupidatat commodo.</span>
+              <span><strong class="font-semibold text-black">Deliverables the way you want them</strong> We beat to your drum. No need to introduce unnnecesary tools. We'll process our deliverables using the same software your internal teams use. Or we'll teach them how to navigate our favorites. </span>
             </li>
             <li class="flex gap-x-3">
               <svg class="mt-1 h-5 w-5 flex-none text-primary" viewBox="0 0 20 20" fill="currentColor" aria-hidden="true">
