--- a/src/pages/product-engineering.astro
+++ b/src/pages/product-engineering.astro
@@ -16,7 +16,7 @@ import Header from "../components/Header.astro";
     <div class="mx-auto max-w-8xl px-6 lg:px-8">
         <div class="mx-auto max-w-2xl lg:mx-0">
             
-          <h1 class="mt-2 text-3xl font-bold tracking-tight text-black sm:text-5xl">Product Design</h1>
+          <h1 class="mt-2 text-3xl font-bold tracking-tight text-black sm:text-5xl">Product Engineering</h1>
           <p class="mt-6 text-xl leading-8 text-gray-700">TecPlus drives innovation by providing cutting-edge product design solutions. Our focus on design systems, product development, and API platform development has earned us recognition in the tech industry across the United States.</p>
         </div>
         <div class="mx-auto mt-16 grid max-w-2xl grid-cols-1 gap-x-8 gap-y-16 lg:mx-0 lg:mt-10 lg:max-w-none lg:grid-cols-12">
