--- a/src/pages/ux-ui.astro
+++ b/src/pages/ux-ui.astro
@@ -53,17 +53,22 @@ import Header from "../components/Header.astro";
               <svg class="mt-1 h-5 w-5 flex-none text-primary" viewBox="0 0 20 20" fill="currentColor" aria-hidden="true">
                 <path fill-rule="evenodd" d="M10 1a4.5 4.5 0 00-4.5 4.5V9H5a2 2 0 00-2 2v6a2 2 0 002 2h10a2 2 0 002-2v-6a2 2 0 00-2-2h-.5V5.5A4.5 4.5 0 0010 1zm3 8V5.5a3 3 0 10-6 0V9h6z" clip-rule="evenodd" />
               </svg>
-              <span><strong class="font-semibold text-black">Deliverables the way you want them</strong> We beat to your drum. No need to introduce unnnecesary tools. We'll process our deliverables using the same software your internal teams use. Or we'll teach them how to navigate our favorites. </span>
+              <span><strong class="font-semibold text-black">Deliverables your way</strong> We beat to your drum. No need to introduce unnnecesary tools. We'll process our deliverables using the same software your internal teams use. Or we'll teach them how to navigate our favorites. </span>
             </li>
             <li class="flex gap-x-3">
               <svg class="mt-1 h-5 w-5 flex-none text-primary" viewBox="0 0 20 20" fill="currentColor" aria-hidden="true">
                 <path d="M4.632 3.533A2 2 0 016.577 2h6.846a2 2 0 011.945 1.533l1.976 8.234A3.489 3.489 0 0016 11.5H4c-.476 0-.93.095-1.344.267l1.976-8.234z" />
                 <path fill-rule="evenodd" d="M4 13a2 2 0 100 4h12a2 2 0 100-4H4zm11.24 2a.75.75 0 01.75-.75H16a.75.75 0 01.75.75v.01a.75.75 0 01-.75.75h-.01a.75.75 0 01-.75-.75V15zm-2.25-.75a.75.75 0 00-.75.75v.01c0 .414.336.75.75.75H13a.75.75 0 00.75-.75V15a.75.75 0 00-.75-.75h-.01z" clip-rule="evenodd" />
               </svg>
-              <span><strong class="font-semibold text-black">Database backups.</strong> Ac tincidunt sapien vehicula erat auctor pellentesque rhoncus. Et magna sit morbi lobortis.</span>
+              <span><strong class="font-semibold text-black">Customer Interviews</strong> 
+                A pivotal part in any design scope is speaking to users. We'll conduct interviews with your customers to understand their needs and wants. We'll also conduct interviews with your internal teams to understand their pain points and goals. All of this data accessible by you and your team. For free. Forever.
+              </span>
             </li>
           </ul>
-          <p class="mt-8">Et vitae blandit facilisi magna lacus commodo. Vitae sapien duis odio id et. Id blandit molestie auctor fermentum dignissim. Lacus diam tincidunt ac cursus in vel. Mauris varius vulputate et ultrices hac adipiscing egestas. Iaculis convallis ac tempor et ut. Ac lorem vel integer orci.</p>
+          <p class="mt-8">
+            Already have the designs and need help with implementation? We can help with that too. Check out <a href="https://www.tecplus.io/product-engineering" >here.
+              </a>
+          </p>
         </div>
       </div>
     </div>
