New comp added from shortcut

--- a/src/pages/staffing.astro
+++ b/src/pages/staffing.astro
@@ -15,7 +15,7 @@ import Header from "../components/Header.astro";
     <div class="mx-auto max-w-8xl px-6 lg:px-8">
         <div class="mx-auto max-w-2xl lg:mx-0">
           <h1 class="mt-2 text-3xl font-bold tracking-tight text-white sm:text-5xl">Staffing</h1>
-          <p class="mt-6 text-xl leading-8 text-gray-700">TecPlus drives innovation by providing cutting-edge software solutions. Our focus on design systems, product development, and API platform development has earned us recognition in the tech industry across the United States.</p>
+          <p class="mt-6 text-xl leading-8 text-gray-700">One of the scariest parts of bringing on a team is the debt they leave behind. How well will this integrate with what we already have? Do they use the same tech stack as my team? and more. We have the solution. Now you can have our brains in your organization.  </p>
         </div>
         <div class="mx-auto mt-16 grid max-w-2xl grid-cols-1 gap-x-8 gap-y-16 lg:mx-0 lg:mt-10 lg:max-w-none lg:grid-cols-12">
           <div class="relative lg:order-last lg:col-span-5">
@@ -41,26 +41,26 @@ import Header from "../components/Header.astro";
             </figure>
           </div>
           <div class="max-w-xl text-base leading-7 text-gray-700 lg:col-span-7">
-            <p>We bring a unique approach to software development, combining our expertise in UX/UI design, open source software, and a range of technologies including Node.js, React, TypeScript, and GraphQL.</p>
+            <p>The best part about it? We're not stingy. If you and our team member are a great fit. We help make that transition smooth. The greatest talent is already working. They aren't looking for a job.</p>
             <ul role="list" class="mt-8 max-w-xl space-y-8 text-white">
               <li class="flex gap-x-3">
                 <svg class="mt-1 h-5 w-5 flex-none text-primary" viewBox="0 0 20 20" fill="currentColor" aria-hidden="true">
                   <path fill-rule="evenodd" d="M5.5 17a4.5 4.5 0 01-1.44-8.765 4.5 4.5 0 018.302-3.046 3.5 3.5 0 014.504 4.272A4 4 0 0115 17H5.5zm3.75-2.75a.75.75 0 001.5 0V9.66l1.95 2.1a.75.75 0 101.1-1.02l-3.25-3.5a.75.75 0 00-1.1 0l-3.25 3.5a.75.75 0 101.1 1.02l1.95-2.1v4.59z" clip-rule="evenodd" />
                 </svg>
-                <span><strong class="font-semibold text-white">API Development.</strong> We build robust and scalable APIs to ensure your applications are always running at their best.</span>
+                <span><strong class="font-semibold text-white">Edcution & Development</strong> We build robust and scalable APIs to ensure your applications are always running at their best.</span>
               </li>
               <li class="flex gap-x-3">
                 <svg class="mt-1 h-5 w-5 flex-none text-primary" viewBox="0 0 20 20" fill="currentColor" aria-hidden="true">
                   <path fill-rule="evenodd" d="M10 1a4.5 4.5 0 00-4.5 4.5V9H5a2 2 0 00-2 2v6a2 2 0 002 2h10a2 2 0 002-2v-6a2 2 0 00-2-2h-.5V5.5A4.5 4.5 0 0010 1zm3 8V5.5a3 3 0 10-6 0V9h6z" clip-rule="evenodd" />
                 </svg>
-                <span><strong class="font-semibold text-white">UX/UI Design.</strong> Our design teams create user-centric designs, ensuring your software solutions are both functional and aesthetically pleasing.</span>
+                <span><strong class="font-semibold text-white">Trained by the best.</strong> Our design teams create user-centric designs, ensuring your software solutions are both functional and aesthetically pleasing.</span>
               </li>
               <li class="flex gap-x-3">
                 <svg class="mt-1 h-5 w-5 flex-none text-primary" viewBox="0 0 20 20" fill="currentColor" aria-hidden="true">
                   <path d="M4.632 3.533A2 2 0 016.577 2h6.846a2 2 0 011.945 1.533l1.976 8.234A3.489 3.489 0 0016 11.5H4c-.476 0-.93.095-1.344.267l1.976-8.234z" />
                   <path fill-rule="evenodd" d="M4 13a2 2 0 100 4h12a2 2 0 100-4H4zm11.24 2a.75.75 0 01.75-.75H16a.75.75 0 01.75.75v.01a.75.75 0 01-.75.75h-.01a.75.75 0 01-.75-.75V15zm-2.25-.75a.75.75 0 00-.75.75v.01c0 .414.336.75.75.75H13a.75.75 0 00.75-.75V15a.75.75 0 00-.75-.75h-.01z" clip-rule="evenodd" />
                 </svg>
-                <span><strong class="font-semibold text-white">Software Testing.</strong> We ensure your application's stability with our comprehensive software testing and quality assurance services.</span>
+                <span><strong class="font-semibold text-white">Great at testing.</strong> We ensure your application's stability with our comprehensive software testing and quality assurance services.</span>
               </li>
             </ul>
             <p class="mt-8">At Tec Plus, we believe in delivering software solutions that not only meet but exceed your expectations. We strive to provide unparalleled customer service and state-of-the-art technology in every project we undertake.</p>
