New comp added from shortcut

--- a/src/pages/ux-ui.astro
+++ b/src/pages/ux-ui.astro
@@ -41,7 +41,7 @@ import Header from "../components/Header.astro";
           </figure>
         </div>
         <div class="max-w-xl text-base leading-7 text-gray-700 lg:col-span-7">
-          <p>Faucibus commodo massa rhoncus, volutpat. Dignissim sed eget risus enim. Mattis mauris semper sed amet vitae sed turpis id. Id dolor praesent donec est. Odio penatibus risus viverra tellus varius sit neque erat velit. Faucibus commodo massa rhoncus, volutpat. Dignissim sed eget risus enim. Mattis mauris semper sed amet vitae sed turpis id.</p>
+          <p>With a seasoned team of designers, we possess the skills and creativity to transform your ideas into robust, user-centric products. Our approach ensures every design decision aligns with business and back-end requirements, thereby creating an intuitive and engaging user interface. Our unique, engineering-first approach to UI design, coupled with our expertise in User Experience design, Information Architecture, Prototyping, Design Systems, and User Research, allows us to deliver products that not only meet technical and business needs but also resonate deeply with end-users. </p>
           <ul role="list" class="mt-8 max-w-xl space-y-8 text-black">
             <li class="flex gap-x-3">
               <svg class="mt-1 h-5 w-5 flex-none text-primary" viewBox="0 0 20 20" fill="currentColor" aria-hidden="true">
