New comp added from shortcut

--- a/src/components/AddOns.astro
+++ b/src/components/AddOns.astro
@@ -2,11 +2,11 @@
     <div class="mx-auto max-w-8xl px-6 lg:px-8">
       <div class="mx-auto max-w-2xl lg:mx-0">
         <h2 class="text-3xl font-bold tracking-tight text-black sm:text-4xl">Comprehensive Tech Solutions</h2>
-        <p class="mt-6 text-lg leading-8 text-black">TecPlus offers an extensive suite of technology solutions to cater to diverse business needs, from web development to AI-based innovations.</p>
+        <p class="mt-6 text-lg leading-8 text-black">TecPlus offers an extensive suite of technology solutions to cater to diverse business needs, from web app development to AI-based innovations.</p>
       </div>
       <dl class="mx-auto mt-16 grid max-w-2xl grid-cols-1 gap-x-8 gap-y-16 text-base leading-7 sm:grid-cols-2 lg:mx-0 lg:max-w-none lg:grid-cols-3">
         <div>
-          <dt class="font-semibold text-black">Custom Web Development</dt>
+          <dt class="font-semibold text-black">Custom Web App Development</dt>
           <dd class="mt-1 text-black">Our team of skilled developers helps businesses build user-friendly, efficient, and custom-tailored websites to establish a strong online presence.</dd>
         </div>
         <div>
