--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -8,7 +8,7 @@ import Button from '../components/Button.astro';
 
 const solutions = [
     {
-        "title": "Enterprise Web Development",
+        "title": "Enterprise Web App Development",
         "description": "Our experienced team leverages modern frameworks like React and Next.js to deliver robust, scalable web applications tailored to meet your enterprise's unique needs.",
         "targetAudience": "Enterprises, Government Entities"
     },
