--- a/src/components/CTA.astro
+++ b/src/components/CTA.astro
@@ -1,3 +1,19 @@
+---
+if (Astro.request.method === "POST") {
+  try {
+    const data = await Astro.request.formData();
+    const name = data.get("username");
+    const email = data.get("email");
+    const password = data.get("password");
+    // Do something with the data
+    console.log(name, email, password)
+  } catch (error) {
+    if (error instanceof Error) {
+      console.error(error.message);
+    }
+  }
+}
+---
 
 <div class="bg-white">
     <div class="mx-auto max-w-8xl py-24 sm:px-6 sm:py-32 lg:px-8">
@@ -6,6 +22,76 @@
         <p class="mx-auto mt-6 max-w-xl text-lg leading-8 text-white">Incididunt sint fugiat pariatur cupidatat consectetur sit cillum anim id veniam aliqua proident excepteur commodo do ea.</p>
         <div class="mt-10 flex items-center justify-center gap-x-6">
           <a href="#" class="rounded-md bg-white px-3.5 py-2.5 text-sm font-semibold text-black shadow-sm hover:bg-gray-100 focus-visible:outline focus-visible:outline-2 focus-visible:outline-offset-2 focus-visible:outline-white">Get started</a>
+          <form  method="post" class="mt-16">
+            <div class="grid grid-cols-1 gap-x-8 gap-y-6 sm:grid-cols-2">
+              <div>
+                <label for="first-name" class="block text-sm font-semibold leading-6 text-gray-900">First name</label>
+                <div class="mt-2.5">
+                  <input type="text" name="first-name" id="first-name" autocomplete="given-name" class="block w-full rounded-md border-0 px-3.5 py-2 text-gray-900 shadow-sm ring-1 ring-inset ring-gray-300 placeholder:text-gray-400 focus:ring-2 focus:ring-inset focus:ring-indigo-600 sm:text-sm sm:leading-6">
+                </div>
+              </div>
+              <div>
+                <label for="last-name" class="block text-sm font-semibold leading-6 text-gray-900">Last name</label>
+                <div class="mt-2.5">
+                  <input type="text" name="last-name" id="last-name" autocomplete="family-name" class="block w-full rounded-md border-0 px-3.5 py-2 text-gray-900 shadow-sm ring-1 ring-inset ring-gray-300 placeholder:text-gray-400 focus:ring-2 focus:ring-inset focus:ring-indigo-600 sm:text-sm sm:leading-6">
+                </div>
+              </div>
+              <div class="sm:col-span-2">
+                <label for="email" class="block text-sm font-semibold leading-6 text-gray-900">Email</label>
+                <div class="mt-2.5">
+                  <input id="email" name="email" type="email" autocomplete="email" class="block w-full rounded-md border-0 px-3.5 py-2 text-gray-900 shadow-sm ring-1 ring-inset ring-gray-300 placeholder:text-gray-400 focus:ring-2 focus:ring-inset focus:ring-indigo-600 sm:text-sm sm:leading-6">
+                </div>
+              </div>
+              <div class="sm:col-span-2">
+                <label for="company" class="block text-sm font-semibold leading-6 text-gray-900">Company</label>
+                <div class="mt-2.5">
+                  <input type="text" name="company" id="company" autocomplete="organization" class="block w-full rounded-md border-0 px-3.5 py-2 text-gray-900 shadow-sm ring-1 ring-inset ring-gray-300 placeholder:text-gray-400 focus:ring-2 focus:ring-inset focus:ring-indigo-600 sm:text-sm sm:leading-6">
+                </div>
+              </div>
+              <div class="sm:col-span-2">
+                <div class="flex justify-between text-sm leading-6">
+                  <label for="phone" class="block font-semibold text-gray-900">Phone</label>
+                  <p id="phone-description" class="text-gray-400">Optional</p>
+                </div>
+                <div class="mt-2.5">
+                  <input type="tel" name="phone" id="phone" autocomplete="tel" aria-describedby="phone-description" class="block w-full rounded-md border-0 px-3.5 py-2 text-gray-900 shadow-sm ring-1 ring-inset ring-gray-300 placeholder:text-gray-400 focus:ring-2 focus:ring-inset focus:ring-indigo-600 sm:text-sm sm:leading-6">
+                </div>
+              </div>
+              <div class="sm:col-span-2">
+                <div class="flex justify-between text-sm leading-6">
+                  <label for="message" class="block text-sm font-semibold leading-6 text-gray-900">How can we help you?</label>
+                  <p id="message-description" class="text-gray-400">Max 500 characters</p>
+                </div>
+                <div class="mt-2.5">
+                  <textarea id="message" name="message" rows="4" aria-describedby="message-description" class="block w-full rounded-md border-0 px-3.5 py-2 text-gray-900 shadow-sm ring-1 ring-inset ring-gray-300 placeholder:text-gray-400 focus:ring-2 focus:ring-inset focus:ring-indigo-600 sm:text-sm sm:leading-6"></textarea>
+                </div>
+              </div>
+              <fieldset class="sm:col-span-2">
+                <legend class="block text-sm font-semibold leading-6 text-gray-900">Expected budget</legend>
+                <div class="mt-4 space-y-4 text-sm leading-6 text-gray-600">
+                  <div class="flex gap-x-2.5">
+                    <input id="budget-under-25k" name="budget" value="under_25k" type="radio" class="mt-1 h-4 w-4 border-gray-300 text-indigo-600 shadow-sm focus:ring-indigo-600">
+                    <label for="budget-under-25k">Less than $25K</label>
+                  </div>
+                  <div class="flex gap-x-2.5">
+                    <input id="budget-25k-50k" name="budget" value="25k-50k" type="radio" class="mt-1 h-4 w-4 border-gray-300 text-indigo-600 shadow-sm focus:ring-indigo-600">
+                    <label for="budget-25k-50k">$25K – $50K</label>
+                  </div>
+                  <div class="flex gap-x-2.5">
+                    <input id="budget-50k-100k" name="budget" value="50k-100k" type="radio" class="mt-1 h-4 w-4 border-gray-300 text-indigo-600 shadow-sm focus:ring-indigo-600">
+                    <label for="budget-50k-100k">$50K – $100K</label>
+                  </div>
+                  <div class="flex gap-x-2.5">
+                    <input id="budget-over-100k" name="budget" value="over_100k" type="radio" class="mt-1 h-4 w-4 border-gray-300 text-indigo-600 shadow-sm focus:ring-indigo-600">
+                    <label for="budget-over-100k">$100K+</label>
+                  </div>
+                </div>
+              </fieldset>
+            </div>
+            <div class="mt-10 flex justify-end border-t border-gray-900/10 pt-8">
+              <button type="submit" class="rounded-md bg-indigo-600 px-3.5 py-2.5 text-center text-sm font-semibold text-white shadow-sm hover:bg-indigo-500 focus-visible:outline focus-visible:outline-2 focus-visible:outline-offset-2 focus-visible:outline-indigo-600">Send message</button>
+            </div>
+          </form>
           <a href="#" class="text-sm font-semibold leading-6 text-white">Learn more</a>
         </div>
         <svg viewBox="0 0 1024 1024" class="absolute left-1/2 top-1/2 -z-10 h-[64rem] w-[64rem] -translate-x-1/2 [mask-image:radial-gradient(closest-side,white,transparent)]" aria-hidden="true">
