New comp added from shortcut

--- a/src/components/Header.astro
+++ b/src/components/Header.astro
@@ -72,13 +72,13 @@
 					<path stroke-linecap="round" stroke-linejoin="round" d="M7.864 4.243A7.5 7.5 0 0119.5 10.5c0 2.92-.556 5.709-1.568 8.268M5.742 6.364A7.465 7.465 0 004.5 10.5a7.464 7.464 0 01-1.15 3.993m1.989 3.559A11.209 11.209 0 008.25 10.5a3.75 3.75 0 117.5 0c0 .527-.021 1.049-.064 1.565M12 10.5a14.94 14.94 0 01-3.6 9.75m6.633-4.596a18.666 18.666 0 01-2.485 5.33" />
 				  </svg>
 				</div>
-				<div class="flex-auto">
+				<!-- <div class="flex-auto">
 				  <a href="#" class="block font-bold text-black">
 					Security
 					<span class="absolute inset-0"></span>
 				  </a>
 				  <p class="mt-1 text-black">Protect Your customers data</p>
-				</div>
+				</div> -->
 			  </div>
 			  <div class="group relative flex gap-x-6 rounded-lg p-4 text-sm leading-6 hover:bg-gray-50">
 				<div class="mt-1 flex h-11 w-11 flex-none items-center justify-center rounded-lg bg-gray-50 group-hover:bg-white">
@@ -88,7 +88,7 @@
 				</div>
 				<div class="flex-auto">
 				  <a href="/staffing" class="block font-bold text-black">
-					Staffing
+					On-Site
 					<span class="absolute inset-0"></span>
 				  </a>
 				  <p class="mt-1 text-black">We connect you with trained experts</p>
@@ -198,7 +198,7 @@
 				<div class="mt-2 space-y-2" id="disclosure-1">
 				  <a href="#" class="block rounded-lg py-2 pl-6 pr-3 text-sm font-bold leading-7 text-white hover:bg-gray-50">Analytics</a>
 				  <a href="/engagement" class="block rounded-lg py-2 pl-6 pr-3 text-sm font-bold leading-7 text-white hover:bg-gray-50">Engagement</a>
-				  <a href="/security" class="block rounded-lg py-2 pl-6 pr-3 text-sm font-bold leading-7 text-white hover:bg-gray-50">Security</a>
+				  <!-- <a href="/security" class="block rounded-lg py-2 pl-6 pr-3 text-sm font-bold leading-7 text-white hover:bg-gray-50">Security</a> -->
 				  <a href="/integrations" class="block rounded-lg py-2 pl-6 pr-3 text-sm font-bold leading-7 text-white hover:bg-gray-50">Integrations</a>
 				  <a href="/automations" class="block rounded-lg py-2 pl-6 pr-3 text-sm font-bold leading-7 text-white hover:bg-gray-50">Automations</a>
 				  <a href="/demo" class="block rounded-lg py-2 pl-6 pr-3 text-sm font-bold leading-7 text-white hover:bg-gray-50">Watch demo</a>
