--- a/src/pages/ux-ui.astro
+++ b/src/pages/ux-ui.astro
@@ -102,11 +102,11 @@ import Header from "../components/Header.astro";
         <div>
           <div class="text-base leading-7 text-gray-700 lg:max-w-lg">
             <p class="text-base font-semibold leading-7 text-primary">Company values</p>
-            <h1 class="mt-2 text-3xl font-bold tracking-tight text-black sm:text-4xl">On a mission to empower remote teams</h1>
+            <h1 class="mt-2 text-3xl font-bold tracking-tight text-black sm:text-4xl">Crafting Excellence, Collaboratively.</h1>
             <div class="max-w-xl">
-              <p class="mt-6">Faucibus commodo massa rhoncus, volutpat. Dignissim sed eget risus enim. Mattis mauris semper sed amet vitae sed turpis id. Id dolor praesent donec est. Odio penatibus risus viverra tellus varius sit neque erat velit. Faucibus commodo massa rhoncus, volutpat. Dignissim sed eget risus enim. Mattis mauris semper sed amet vitae sed turpis id.</p>
-              <p class="mt-8">Et vitae blandit facilisi magna lacus commodo. Vitae sapien duis odio id et. Id blandit molestie auctor fermentum dignissim. Lacus diam tincidunt ac cursus in vel. Mauris varius vulputate et ultrices hac adipiscing egestas. Iaculis convallis ac tempor et ut. Ac lorem vel integer orci.</p>
-              <p class="mt-8">Et vitae blandit facilisi magna lacus commodo. Vitae sapien duis odio id et. Id blandit molestie auctor fermentum dignissim. Lacus diam tincidunt ac cursus in vel. Mauris varius vulputate et ultrices hac adipiscing egestas. Iaculis convallis ac tempor et ut. Ac lorem vel integer orci.</p>
+              <p class="mt-6">At Tecplus, we've refined a collective methodology for software design and development over the years that enhances the probability of delivering outstanding work while preserving the welfare of our team.At Tecplus, we've refined a collective methodology for software design and development over the years that enhances the probability of delivering outstanding work while preserving the welfare of our team.</p>
+              <p class="mt-8">Our approach emphasizes harmonious team interactions, eliminating silos, and fostering a sense of shared accountability - the bedrock of cohesive and efficient teams.</p>
+              <p class="mt-8">This integrative and human-centric model has propelled us to the forefront of the industry, enabling us to deliver tailor-made solutions that exceed client expectations.</p>
             </div>
           </div>
           <dl class="mt-10 grid grid-cols-2 gap-8 border-t border-gray-900/10 pt-10 sm:grid-cols-4">
