--- a/src/pages/about.astro
+++ b/src/pages/about.astro
@@ -39,8 +39,7 @@ import Header from "../components/Header.astro";
 					<h1
 						class="max-w-2xl text-4xl font-bold tracking-tight text-black sm:text-6xl lg:col-span-2 xl:col-auto"
 					>
-						Ware a passionate group of people working from around
-						the world to build the future of ecommerce.
+						Helping our clients build better futures for humanity
 					</h1>
 					<div
 						class="mt-6 max-w-xl lg:mt-0 xl:col-end-1 xl:row-start-1"
@@ -72,138 +71,7 @@ import Header from "../components/Header.astro";
 			</div>
 		</div>
 
-		<!-- Timeline section -->
-		<div class="mx-auto -mt-8 max-w-8xl px-6 lg:px-8">
-			<div
-				class="mx-auto grid max-w-2xl grid-cols-1 gap-8 overflow-hidden lg:mx-0 lg:max-w-none lg:grid-cols-4"
-			>
-				<div>
-					<time
-						datetime="2021-08"
-						class="flex items-center text-sm font-semibold leading-6 text-primary"
-					>
-						<svg
-							viewBox="0 0 4 4"
-							class="mr-4 h-1 w-1 flex-none"
-							aria-hidden="true"
-						>
-							<circle cx="2" cy="2" r="2" fill="currentColor"
-							></circle>
-						</svg>
-						Aug 2021
-						<div
-							class="absolute -ml-2 h-px w-screen -translate-x-full bg-gray-900/10 sm:-ml-4 lg:static lg:-mr-6 lg:ml-8 lg:w-auto lg:flex-auto lg:translate-x-0"
-							aria-hidden="true"
-						>
-						</div>
-					</time>
-					<p
-						class="mt-6 text-lg font-semibold leading-8 tracking-tight text-white"
-					>
-						Founded company
-					</p>
-					<p class="mt-1 text-base leading-7 text-black">
-						Nihil aut nam. Dignissimos a pariatur et quos omnis.
-						Aspernatur asperiores et dolorem dolorem optio voluptate
-						repudiandae.
-					</p>
-				</div>
-				<div>
-					<time
-						datetime="2021-12"
-						class="flex items-center text-sm font-semibold leading-6 text-primary"
-					>
-						<svg
-							viewBox="0 0 4 4"
-							class="mr-4 h-1 w-1 flex-none"
-							aria-hidden="true"
-						>
-							<circle cx="2" cy="2" r="2" fill="currentColor"
-							></circle>
-						</svg>
-						Dec 2021
-						<div
-							class="absolute -ml-2 h-px w-screen -translate-x-full bg-gray-900/10 sm:-ml-4 lg:static lg:-mr-6 lg:ml-8 lg:w-auto lg:flex-auto lg:translate-x-0"
-							aria-hidden="true"
-						>
-						</div>
-					</time>
-					<p
-						class="mt-6 text-lg font-semibold leading-8 tracking-tight text-black"
-					>
-						Secured $65m in funding
-					</p>
-					<p class="mt-1 text-base leading-7 text-black">
-						Provident quia ut esse. Vero vel eos repudiandae
-						aspernatur. Cumque minima impedit sapiente a architecto
-						nihil.
-					</p>
-				</div>
-				<div>
-					<time
-						datetime="2022-02"
-						class="flex items-center text-sm font-semibold leading-6 text-primary"
-					>
-						<svg
-							viewBox="0 0 4 4"
-							class="mr-4 h-1 w-1 flex-none"
-							aria-hidden="true"
-						>
-							<circle cx="2" cy="2" r="2" fill="currentColor"
-							></circle>
-						</svg>
-						Feb 2022
-						<div
-							class="absolute -ml-2 h-px w-screen -translate-x-full bg-gray-900/10 sm:-ml-4 lg:static lg:-mr-6 lg:ml-8 lg:w-auto lg:flex-auto lg:translate-x-0"
-							aria-hidden="true"
-						>
-						</div>
-					</time>
-					<p
-						class="mt-6 text-lg font-semibold leading-8 tracking-tight text-black"
-					>
-						Released beta
-					</p>
-					<p class="mt-1 text-base leading-7 text-black">
-						Sunt perspiciatis incidunt. Non necessitatibus aliquid.
-						Consequatur ut officiis earum eum quia facilis. Hic
-						deleniti dolorem quia et.
-					</p>
-				</div>
-				<div>
-					<time
-						datetime="2022-12"
-						class="flex items-center text-sm font-semibold leading-6 text-primary"
-					>
-						<svg
-							viewBox="0 0 4 4"
-							class="mr-4 h-1 w-1 flex-none"
-							aria-hidden="true"
-						>
-							<circle cx="2" cy="2" r="2" fill="currentColor"
-							></circle>
-						</svg>
-						Dec 2022
-						<div
-							class="absolute -ml-2 h-px w-screen -translate-x-full bg-gray-900/10 sm:-ml-4 lg:static lg:-mr-6 lg:ml-8 lg:w-auto lg:flex-auto lg:translate-x-0"
-							aria-hidden="true"
-						>
-						</div>
-					</time>
-					<p
-						class="mt-6 text-lg font-semibold leading-8 tracking-tight text-black"
-					>
-						Global launch of product
-					</p>
-					<p class="mt-1 text-base leading-7 text-black">
-						Ut ipsa sint distinctio quod itaque nam qui. Possimus
-						aut unde id architecto voluptatem hic aut pariatur
-						velit.
-					</p>
-				</div>
-			</div>
-		</div>
-
+	
 		<!-- Logo cloud -->
 		<div class="mx-auto mt-32 max-w-8xl sm:mt-40 sm:px-6 lg:px-8">
 			<div
