New comp added from shortcut

--- a/src/components/Header.astro
+++ b/src/components/Header.astro
@@ -150,7 +150,7 @@
 		  -->
 		  <div x-show="open" class="absolute -left-8 top-full z-10 mt-3 w-56 rounded-xl bg-white p-2 shadow-lg ring-1 ring-gray-900/5">
 			<a href="/about" class="block rounded-lg px-3 py-2 text-sm font-bold leading-6 text-black hover:bg-gray-100">About</a>
-			<a href="/careers" class="block rounded-lg px-3 py-2 text-sm font-bold leading-6 text-black hover:bg-gray-100">Careers</a>
+			<!-- <a href="/careers" class="block rounded-lg px-3 py-2 text-sm font-bold leading-6 text-black hover:bg-gray-100">Careers</a> -->
 			<a href="/support" class="block rounded-lg px-3 py-2 text-sm font-bold leading-6 text-black hover:bg-gray-100">Support</a>
 			<a href="/press" class="block rounded-lg px-3 py-2 text-sm font-bold leading-6 text-black hover:bg-gray-100">Press</a>
 			<a href="/insights" class="block rounded-lg px-3 py-2 text-sm font-bold leading-6 text-black hover:bg-gray-100">Blog / Insights</a>
@@ -224,7 +224,7 @@
 				<!-- 'Company' sub-menu, show/hide based on menu state. -->
 				<div x-data="hide" class="mt-2 space-y-2" id="disclosure-2">
 				  <a href="/about" class="block rounded-lg py-2 pl-6 pr-3 text-sm font-bold leading-7 text-black hover:bg-gray-50">About</a>
-				  <a href="/careers" class="block rounded-lg py-2 pl-6 pr-3 text-sm font-bold leading-7 text-black hover:bg-gray-50">Careers</a>
+				  <!-- <a href="/careers" class="block rounded-lg py-2 pl-6 pr-3 text-sm font-bold leading-7 text-black hover:bg-gray-50">Careers</a> -->
 				  <a href="/support" class="block rounded-lg py-2 pl-6 pr-3 text-sm font-bold leading-7 text-black hover:bg-gray-50">Support</a>
 				  <a href="/oss" class="block rounded-lg py-2 pl-6 pr-3 text-sm font-bold leading-7 text-black hover:bg-gray-50">Open Source Projects</a>
 				  <a href="/blog" class="block rounded-lg py-2 pl-6 pr-3 text-sm font-bold leading-7 text-black hover:bg-gray-50">Blog</a>
