--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -258,7 +258,7 @@ With recognition of our work in UX/UI, product development, and API platform dev
       <div>
         <h2 class="text-base font-semibold leading-7 text-indigo-600">Everything you need</h2>
         <p class="mt-2 text-3xl font-bold tracking-tight text-gray-900 sm:text-4xl">Product lead growth</p>
-        <p class="mt-6 text-base leading-7 text-gray-600">Lorem ipsum, dolor sit amet consectetur adipisicing elit. Maiores impedit perferendis suscipit eaque, iste dolor cupiditate blanditiis ratione.</p>
+        <p class="mt-6 text-base leading-7 text-gray-600">Harness the power of product-led growth with Tecplus. We focus on creating intuitive, user-centric products that drive customer satisfaction and promote sustainable business growth.</p>
       </div>
       <dl class="col-span-2 grid grid-cols-1 gap-x-8 gap-y-10 text-base leading-7 text-gray-600 sm:grid-cols-2 lg:gap-y-16">
         <div class="relative pl-9">
@@ -268,7 +268,7 @@ With recognition of our work in UX/UI, product development, and API platform dev
             </svg>
             Invite team members
           </dt>
-          <dd class="mt-2">Rerum repellat labore necessitatibus reprehenderit molestiae praesentium.</dd>
+          <dd class="mt-2">Enhance your project's productivity by inviting team members to our collaborative platform. Together, we create a synergistic environment that takes your ideas from concept to reality.</dd>
         </div>
         <div class="relative pl-9">
           <dt class="font-semibold text-gray-900">
@@ -277,7 +277,7 @@ With recognition of our work in UX/UI, product development, and API platform dev
             </svg>
             List view
           </dt>
-          <dd class="mt-2">Corporis asperiores ea nulla temporibus asperiores non tempore assumenda aut.</dd>
+          <dd class="mt-2">Organize and track your project's progress effortlessly with our intuitive List View feature. Experience the ease of navigating through tasks, all at a glance.</dd>
         </div>
         <div class="relative pl-9">
           <dt class="font-semibold text-gray-900">
@@ -286,7 +286,7 @@ With recognition of our work in UX/UI, product development, and API platform dev
             </svg>
             Keyboard shortcuts
           </dt>
-          <dd class="mt-2">In sit qui aliquid deleniti et. Ad nobis sunt omnis. Quo sapiente dicta laboriosam.</dd>
+          <dd class="mt-2">Streamline your workflow with our customized keyboard shortcuts. A faster and more efficient way to navigate through your project, enabling you to focus on what matters most.</dd>
         </div>
         <div class="relative pl-9">
           <dt class="font-semibold text-gray-900">
@@ -295,7 +295,7 @@ With recognition of our work in UX/UI, product development, and API platform dev
             </svg>
             Calendars
           </dt>
-          <dd class="mt-2">Sed rerum sunt dignissimos ullam. Iusto iure occaecati voluptate eligendi fugiat sequi.</dd>
+          <dd class="mt-2">Stay ahead of your project timelines with our interactive Calendars. Visualize key milestones, deadlines, and schedules to keep your project on track.</dd>
         </div>
         <div class="relative pl-9">
           <dt class="font-semibold text-gray-900">
@@ -304,7 +304,7 @@ With recognition of our work in UX/UI, product development, and API platform dev
             </svg>
             Notifications
           </dt>
-          <dd class="mt-2">Quos inventore harum enim nesciunt. Aut repellat rerum omnis adipisci.</dd>
+          <dd class="mt-2">Never miss an update with Tecplus. Our real-time notifications ensure you stay informed about your project's progress and immediately aware of any changes.</dd>
         </div>
         <div class="relative pl-9">
           <dt class="font-semibold text-gray-900">
@@ -313,7 +313,7 @@ With recognition of our work in UX/UI, product development, and API platform dev
             </svg>
             Boards
           </dt>
-          <dd class="mt-2">Quae sit sunt excepturi fugit veniam voluptatem ipsum commodi.</dd>
+          <dd class="mt-2">Visualize your project workflow with our dynamic Boards. They provide a clear, concise overview of tasks and their statuses, promoting better project management and team collaboration.</dd>
         </div>
         <div class="relative pl-9">
           <dt class="font-semibold text-gray-900">
@@ -322,7 +322,7 @@ With recognition of our work in UX/UI, product development, and API platform dev
             </svg>
             Reporting
           </dt>
-          <dd class="mt-2">Eos laudantium repellat sed architecto earum unde incidunt. Illum sit dolores voluptatem.</dd>
+          <dd class="mt-2">Track your project's performance with comprehensive Reporting tools. Gain valuable insights into your project's progress and use the data to make informed strategic decisions.</dd>
         </div>
         <div class="relative pl-9">
           <dt class="font-semibold text-gray-900">
@@ -331,7 +331,7 @@ With recognition of our work in UX/UI, product development, and API platform dev
             </svg>
             Mobile app
           </dt>
-          <dd class="mt-2">Nulla est saepe accusamus nostrum est est. Fugit voluptatum omnis quidem voluptatem.</dd>
+          <dd class="mt-2">Stay connected on the go with the Tecplus mobile app. Access your projects, tasks, and team updates anytime, anywhere, providing you with maximum flexibility and control.</dd>
         </div>
       </dl>
     </div>
