New comp added from shortcut

--- a/src/components/ServiceSection.astro
+++ b/src/components/ServiceSection.astro
@@ -1,4 +1,4 @@
-<section class="bg-gray-100 mb-default py-default">
+<section class="bg-gray-100 mb-default py-24">
     <div class="mx-auto max-w-7xl">
         <div class="mx-auto max-w-7xl">
             <div class="pb-default">
@@ -46,7 +46,7 @@
                                 <p
                                     class="font-medium text-sm text-tm-red-brand"
                                 >
-                                    Unmatched experience at scale.
+                                    Building Products that scale
                                 </p>
                                 <h3 class="mb-0 font-semibold h3">
                                     Web App Development
