New comp added from shortcut

--- a/src/components/Header.astro
+++ b/src/components/Header.astro
@@ -139,7 +139,7 @@
 			<a href="/about" class="block rounded-lg px-3 py-2 text-sm font-bold leading-6 text-black hover:bg-gray-100">About</a>
 			<!-- <a href="/careers" class="block rounded-lg px-3 py-2 text-sm font-bold leading-6 text-black hover:bg-gray-100">Careers</a> -->
 			<a href="/support" class="block rounded-lg px-3 py-2 text-sm font-bold leading-6 text-black hover:bg-gray-100">Support</a>
-			<a href="/press" class="block rounded-lg px-3 py-2 text-sm font-bold leading-6 text-black hover:bg-gray-100">Press</a>
+			<!-- <a href="/press" class="block rounded-lg px-3 py-2 text-sm font-bold leading-6 text-black hover:bg-gray-100">Press</a> -->
 			<a href="/insights" class="block rounded-lg px-3 py-2 text-sm font-bold leading-6 text-black hover:bg-gray-100">Blog / Insights</a>
 		  </div>
 		</div>
