New comp added from shortcut

--- a/src/components/ServiceSection.astro
+++ b/src/components/ServiceSection.astro
@@ -173,17 +173,14 @@
                                     Our experience. Your team.
                                 </p>
                                 <h3 class="mb-0 font-semibold h3">
-                                    Team Augmentation
+                                    High Perfomance Distributed Backend Solutions
                                 </h3>
                                 <div class="body-default mb-3">
                                     <p>
-                                        We can bolster your existing teams and
-                                        efforts, both new and in-flight, with a
-                                        broad range of specialised capacity or
-                                        capability. We’ve augmented teams at the
-                                        ABC, <a href="/work/dovetail"
-                                            >Dovetail</a
-                                        >, Koala, and more.
+                                        We employ Golang's simplicity, efficiency, and strong support for concurrent programming to build powerful and scalable backend systems.
+
+
+                                        
                                     </p>
                                 </div><a
                                     href="/services/augmentation"
@@ -227,20 +224,14 @@
                                 <p
                                     class="font-medium text-sm text-tm-red-brand"
                                 >
-                                    Behind every great experience.
+                                    Behind every great API.
                                 </p>
                                 <h3 class="mb-0 font-semibold h3">
-                                    API Platforms
+                                    Bulletproof APIs 
                                 </h3>
                                 <div class="body-default mb-3">
                                     <p>
-                                        Great user experiences need great APIs.
-                                        We bring decades of expertise and
-                                        understanding to get this crucial part
-                                        of any system right. We’ve done platform
-                                        work with <a href="/work/reckon"
-                                            >Reckon</a
-                                        >, ABC, Sungage, and more.
+                                        We build APIs that are fast, reliable, and easy to use. It's our job to accomodate for every error, bad request, and user fumble. We hand over or refactor endpoints and include the tests. So you can be assured it works in every scenario. 
                                     </p>
                                 </div>
                                 <a
